# exams

./: .gitignore  README.md  pom.xml
cpp/: CMakeLists.txt
cpp/include/: exams.h  exams1.h  exams3.h  exams4.h
cpp/src/exams/exams1/: Exam1.cpp  Exam3.cpp  Exam3_2.cpp
cpp/src/exams/exams3/: Exam239.cpp  Exam240.cpp  Exam241.cpp  Exam242.cpp  Exam251.cpp  Exam271.cpp  Exam275.cpp  Exam278.cpp  Exam282.cpp  Exam288.cpp  Exam292.cpp  Exam292_2.cpp
cpp/src/exams/exams4/: Exam306.cpp  Exam313.cpp  Exam314.cpp  Exam317.cpp  Exam319.cpp  Exam320.cpp  Exam323.cpp  Exam324.cpp  Exam329.cpp  Exam333.cpp  Exam336.cpp
cpp/tests/exams/exams1/: test_Exam3.cpp  test_Exam3_2.cpp
cpp/tests/exams/exams3/: test_Exam239.cpp  test_Exam240.cpp  test_Exam241.cpp  test_Exam251.cpp  test_Exam271.cpp  test_Exam275.cpp  test_Exam288.cpp  test_Exam292_2.cpp
cpp/tests/exams/exams4/: test_Exam314.cpp  test_Exam317.cpp  test_Exam319.cpp  test_Exam323.cpp
java/: pom.xml
kotlin/: build.gradle  settings.gradle
problems/exams1/: 1-两数之和.md  10-N 字形变换.md  100-包含三个字符串的最短字符串.md  11-整数反转.md  12-字符串转换整数 (atoi).md  13-一维数组的动态和.md  14-将数字变成 0 的操作次数.md  15-最富有客户的资产总量.md  16-Fizz Buzz.md  17-链表的中间结点.md  19-最长交替子序列.md  2-回文数.md  20-重新放置石块.md  21-盛最多水的容器.md  22-将字符串分割为最少的美丽子字符串.md  23-黑格子的数目.md  24-达到末尾下标所需的最大跳跃次数.md  25-构造最长非递减子数组.md  26-使数组中所有元素都等于零.md  27-使数组中的所有元素都等于零.md  28-特殊元素平方和.md  29-数组的最大美丽值.md  3-整数转罗马数字.md  3-罗马数字转整数.md  30-正则表达式匹配.md  31-合法分割的最小下标.md  32-三数之和.md  34-合并后数组中的最大元素.md  35-找到数组的中间位置.md  36-搜索插入位置.md  37-合并区间.md  38-最长合法子字符串的长度.md  39-旋转图像.md  4-最长公共前缀.md  40-矩阵置零.md  (+68 more)
(+867 files in other folders)
